plang/testing/logs/false-incorrect/97/program97.p.p
tYBb :- (zkE, qzF ap8SM (qq (ZQ9) (NN) Hq5 Z9Uz), t jn5N; vJat j (ciUm L), iwk (Jy3), oj q (f L (m3lcT B4FP4)) N8WD D4aN, ycFi8 (tkAlc) (NX0) Bv6Jb (Mr8zE); aSMk (m5H (ma) Gmp7i) J601m (f8GE), tjnpB xD Yi8pp).


j J (Y) (bK) (E1lDI) :- qKE; (g (se1Z X)).
mYtp (qg1 (dL3B (Rc47) (cUpw5) zrpfJ Cf) (DFnlY) (s1Uyv (eO TypS cn B9 DbE) (FaXQ)) txVz) (rKZ pgJY) :- (ibv; (m3SuL tD B9qF fu (Z)); wFv8 (qC KN1 cp SC) UsSs (lOB (RTH) (XhFCL)) rwbd, m Ng8v U (F) KabtJ).

a (ci (qOp3 r (miMU4) (miZaU LDY4i tO3 (PHHki))) (q7hO (IsXs) (bzg D (c5G uVtE (A)) qo OBf) s6 (psEj (uNcA (Us))))) dVVo.

sp (HG) nF1 :- (y (jr (xt2 PQmN) (B1) (wBN (xE xbLoM G) (T) (F))) (IY) QskM (rkO), sLB v7J; z; el (v A2sCg (obaI HTZ0 (vaJ (Iih) (SRp)) xDdgV (OgEQZ)) kiy); tlFq6 pCwFz gL ksrLT, xX2K LBGs KU (pEED), yf2, lbj (ZrJ) (r (EIPm) (qe V5x)) l6w AHsT; (q (osW (H) (wP) (c9 (wEf5z i (vzf) (pa j5FrA (h7 (hgfN2 wV0b) (g d) pXsxr h1zG) (am8k rm JqC (rG97)) aX) eQm) W4u)) (u88) (h5 (sPN4) (ZWS))); jgK; tF (Mk65) Co).

jdh2 (hYSWM (Z3CJ) WTJ (mfyN (i h4rl r)) (V0t4b)).

tML (S).

? (x3pK); aawLL, ih2J thxK; k1 (zIj (Wt8) (DQCF) leJ) (X) (mZ5 aOTL (l7Y yPRm) MXGD9 (gKq)); s4a2 dhdY; w, nn u U N; m wjx (Oww8K) n lSoy0; (dZO6 (gD61o ePVZF lr9s Ha5)), nUlCU UFH (Qm) GgU, kQwK (fh nbvq0 KMEs) bH3p.

